# workers-rs-async-graphql

./: README.md  package-lock.json  package.json
demo/: Cargo.toml  package-lock.json  package.json  wrangler.toml
demo/.vscode-rust-analyzer/: .future-incompat-report.json  .rustc_info.json
demo/src/: lib.rs
demo/src/starwars/: model.rs
