[package]
name = "workers-rs-async-graphql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-graphql = "7.0.3"
async-graphql-axum = {version = "7.0.3", default-features = false }
axum = { version = "0.7.5", default-features = false }
futures = "0.3.30"
slab = "0.4.9"
tower-service = "0.3.2"
wasm-bindgen-futures = "0.4.42"
worker = { version = "0.2.0", features = ["http", "axum"] }
worker-macros = { version = "0.2.0", features = ["http"] }

[profile.release]
opt-level = "s"   # optimize for size in release builds
lto = true
strip = true
codegen-units = 1

[patch.crates-io]
async-graphql = { git = "https://github.com/async-graphql/async-graphql.git" }
async-graphql-axum = { git = "https://github.com/async-graphql/async-graphql.git" }
